# transpaer-schema-rust

./: Cargo.toml
schema/: sustainity.json  transpaer.json
scripts/: generate.sh
sustainity-schema/: Cargo.toml
sustainity-schema/src/: data.rs  defs.rs  errors.rs  lib.rs  merge.rs  models.rs  read.rs  save.rs  sort.rs
sustainity-schema/tests/: models.rs
transpaer-schema/: Cargo.toml
transpaer-schema/src/: data.rs  errors.rs  lib.rs  models.rs  sort.rs
transpaer-schema/tests/: models.rs
